# CS217-RayTracing

./: CMakeLists.txt  LICENSE  Makefile  README.md  start.sh  vec.h
.cache/clangd/index/: camera.h.E1C02027A4066796.idx  (+8 more)
.ccls-cache/@@Users@yixinlong@Documents@GitHub@CS217-RayTracing/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityVersions.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@__wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctermid.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_locale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  (+307 more)
include/: camera.h  color.h  light.h  object.h  phong.h  phong_shader.h  plane.h  point_light.h  ray.h  shader.h  sphere.h  util.h  vec.h  world.h
kernel/: kernel.h
main/: main.cu  scene1.cpp  scene1.cu  scene2.cpp  scene2.cu  scene3.cpp  scene3.cu
test/: test.cpp  test.cu  testKernel.h
(+22 files in other folders)
